--- a/_config.yml
+++ b/_config.yml
@@ -5,18 +5,21 @@ permalink:           pretty
 relative_permalinks: true
 
 # Setup
-title:               Lanyon
-tagline:             'A Jekyll theme'
-description:         'A reserved <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:                 http://lanyon.getpoole.com
+title:               Code Craftsman
+tagline:             'Software craftsmanship and iOS development'
+description:         'This is my personal blog where I talk about software.'
+domain_name:         code-craftsman.fr
+url:                 http://code-craftsman.fr
 baseurl:             ''
 paginate:            5
 
 # About/contact
 author:
-  name:              Mark Otto
-  url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
+  name:              Sébastien Duperron
+  twitter:           https://twitter.com/liquidseb
+  github:            https://github.com/liquidsoul
+  linkedin:          https://fr.linkedin.com/in/sebastienduperron
+  email:             contact@code-craftsman.fr
 
 # Custom vars
 version:             1.0.0
