--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
+exclude:			[generateSiteOnBranch.sh]
+
 # Permalinks
 #
 # Use of `relative_permalinks` ensures post links from the index work properly.
