Use kramdown and rouge syntax highlighter

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,11 @@
 exclude:			[generateSiteOnBranch.sh]
 
+# Dependencies
+markdown:            kramdown
+kramdown:
+  input:             GFM
+  syntax_highlighter: rouge
+
 # Permalinks
 #
 # Use of `relative_permalinks` ensures post links from the index work properly.
