--- a/_config.yml
+++ b/_config.yml
@@ -29,5 +29,8 @@ author:
   linkedin:          https://fr.linkedin.com/in/sebastienduperron
   email:             contact@code-craftsman.fr
 
+# Disqus
+disqus_shortname:    codecraftsmanfr
+
 # Custom vars
 version:             1.0.0
