[feature] improve Bundler/Gemfile integration
* add script for easy setup
* ignore generated files in jekyll and git
* add deployment info in README

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-exclude:			[generateSiteOnBranch.sh]
+exclude:			[setup.sh, bin, Gemfile, Gemfile.lock]
 
 # Dependencies
 markdown:            kramdown
