--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-exclude:			[setup.sh, bin, Gemfile, Gemfile.lock]
+exclude:			[setup.sh, bin, Gemfile, Gemfile.lock, fastlane]
 
 # Dependencies
 markdown:            kramdown
